add nodem_port propertie

--- a/src/resources/props/globals.properties
+++ b/src/resources/props/globals.properties
@@ -32,3 +32,4 @@ project_serviceid = nodehome
 project_seedHost     = http://127.0.0.1:7080
 project_net = DEBUGNET
 project_api_path = /chaincode_query
+nodem_port = 8886
