checkNode.jsp 추가

--- a/src/resources/props/globals.properties
+++ b/src/resources/props/globals.properties
@@ -23,6 +23,7 @@ Globals.ShellFilePath     = globals.properties
 Globals.rootPath = /home/nodehome/sdk/nodehome-svm/
 Globals.fileStorePath =  /home/nodehome/sdk/nodehome-svm/WebContent/scfiles/
 Globals.fileTempPath =  /home/nodehome/temp/
+Globals.serviceHost = http://192.168.0.150:8080
 
 #project Properties
 project_name = NodeHome-Platform
