--- a/src/resources/props/globals.properties
+++ b/src/resources/props/globals.properties
@@ -14,7 +14,7 @@ Globals.Auth = session
 
 #mysql
 Globals.mysql.DriverClassName=net.sf.log4jdbc.DriverSpy
-Globals.mysql.Url=jdbc:log4jdbc:mysql://127.0.0.1:3306/fimusic?useUnicode=true&amp;characterEncoding=utf8
+Globals.mysql.Url=jdbc:log4jdbc:mysql://127.0.0.1:3306/dbname?useUnicode=true&amp;characterEncoding=utf8
 Globals.mysql.UserName = 
 Globals.mysql.Password = 
 
