--- a/WebContent/sappconfig.json
+++ b/WebContent/sappconfig.json
@@ -1,6 +1,6 @@
 {  
   "sappinfo": {  
-        "serviceid": "nodehome",  
+        "serviceID": "nodehome",  
         "wwwpath": "D:/workspaceDev/.metadata/.plugins/org.eclipse.wst.server.core/tmp0/wtpwebapps/NodeHome-Platform-SVM"  
   }  
 }
